<resources>
    <string name="app_name">BlindCommunity2</string>
    <string name="blind_community">Blind Community</string>

    <string name="home">home</string>
    <string name="account">account</string>
    <string name="favorite">favorite</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <!--  login  -->
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_log_in">로그인</string>
    <string name="login_sign_up">회원가입</string>

    <!--  home  -->
    <string name="free_board">자유 게시판</string>
    <string name="info_board">정보 게시판</string>
    <string name="employee_board">취업 게시판</string>
    <string name="main_toolbar_text">Blind Community</string>

    <!--  board  -->
    <string name="board_list_user_icn">board list user icon</string>
    <string name="board_plus_icn">board plus icon</string>
    <string name="board_refresh_icn">board refresh icon</string>

    <!--  write post  -->
    <string name="write_post_back_icn">write post back icon</string>
    <string name="write_post_title">제목</string>
    <string name="write_post_content">내용</string>

    <!--  post  -->
    <string name="post_more_icn">post more icon</string>
    <string name="post_register_comment">등록</string>
    <string name="dialog_action_delete">삭제하기</string>
    <string name="post_star_icn">post star icon</string>

    <!--  account  -->
    <string name="account_my_boards">내가 쓴 게시물</string>
    <string name="account_no_data">내가 쓴 게시물이 없습니다. \n 게시물을 작성하여 기록을 남겨보세요!</string>
    <string name="account_setting_img">account setting icon</string>

    <!--  sign up  -->
    <string name="signup_back">뒤로</string>
    <string name="signup_id">ID</string>
    <string name="signup_pw">PW</string>
    <string name="signup_nickname">NICKNAME</string>
    <string name="signup_age">AGE</string>
    <string name="signup_confirm">회원가입 완료</string>

    <!--  favorite  -->
    <string name="favorite_header">내가 찜한 게시글</string>
</resources>