<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_orange">

    <TextView
        android:id="@+id/write_post_type_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="자유 게시판"
        android:textSize="20sp"
        android:fontFamily="@font/notosanskr_bold"/>

    <ImageButton
        android:id="@+id/write_post_back_bt"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@+id/write_post_type_tv"
        app:layout_constraintBottom_toBottomOf="@+id/write_post_type_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:src="@drawable/icn_back"
        android:background="@null"
        android:contentDescription="@string/write_post_back_icn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/write_post_type_tv"
        app:layout_constraintBottom_toTopOf="@+id/write_post_cancel_bt"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/write_post_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_post_title"
                android:textSize="14sp"
                android:textColor="@color/dark_gray"
                android:background="@color/transparent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLength="100"
                android:maxLines="1"
                android:autofillHints="no"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/light_gray"/>

            <EditText
                android:id="@+id/write_post_content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_post_content"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:background="@color/transparent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLength="1000"
                android:autofillHints="no"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/write_post_cancel_bt"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:fontFamily="@font/notosanskr_regular"
        android:background="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/write_post_confirm_bt"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:fontFamily="@font/notosanskr_regular"
        android:background="@color/white"
        android:gravity="center"/>

    <View
        android:layout_width="1dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toTopOf="@+id/write_post_cancel_bt"
        app:layout_constraintBottom_toBottomOf="@+id/write_post_cancel_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>