<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.yeonkyu.blindcommunity2.ui.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/signup_back_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/signup_back"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:fontFamily="@font/notosanskr_regular"
            android:background="@color/transparent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/signup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/signup_pw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:maxLength="30"
                android:maxLines="1"
                android:hint="@string/signup_id"
                android:text="@={viewModel.id}"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/notosanskr_regular"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/signup_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signup_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/signup_pw"
                android:text="@={viewModel.pw}"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/notosanskr_regular"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signup_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/signup_pw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/signup_nickname"
                android:text="@={viewModel.nickname}"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/notosanskr_regular"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/signup_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/signup_nickname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:maxLength="4"
                android:maxLines="1"
                android:hint="@string/signup_age"
                android:text="@={viewModel.age}"
                android:textSize="16sp"
                android:fontFamily="@font/notosanskr_regular"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/signup_age"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/signup_confirm"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/notosanskr_medium"
                android:onClick="@{() -> viewModel.confirm()}"
                android:clickable="true"
                android:focusable="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>