<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.yeonkyu.blindcommunity2.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_yellow_paper">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blind_community"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/notosanskr_medium"/>

        <TextView
            android:id="@+id/login_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_id_et"
            android:layout_marginTop="220dp"
            android:layout_marginStart="30dp"
            android:text="@string/login_id"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_regular"/>

        <EditText
            android:id="@+id/login_id_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/login_id_tv"
            app:layout_constraintBottom_toBottomOf="@+id/login_id_tv"
            app:layout_constraintStart_toEndOf="@+id/login_id_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:text="@={viewModel.id}"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_regular"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/login_pw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_id_tv"
            app:layout_constraintStart_toStartOf="@+id/login_id_tv"
            app:layout_constraintEnd_toEndOf="@+id/login_id_tv"
            android:layout_marginTop="20dp"
            android:text="@string/login_pw"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_regular"/>

        <EditText
            android:id="@+id/login_pw_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/login_pw_tv"
            app:layout_constraintBottom_toBottomOf="@+id/login_pw_tv"
            app:layout_constraintStart_toStartOf="@+id/login_id_et"
            android:text="@={viewModel.pw}"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_regular"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor"/>

        <TextView
            android:id="@+id/login_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_pw_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.alertMsg}"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:fontFamily="@font/notosanskr_regular"/>

        <Button
            android:id="@+id/login_log_in_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_pw_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:text="@string/login_log_in"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_primary_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:onClick="@{()-> viewModel.login()}"/>

        <TextView
            android:id="@+id/login_sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            android:text="@string/login_sign_up"
            android:textSize="26sp"
            android:textColor="#ff9500"
            android:fontFamily="@font/notosanskr_bold"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
