<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_yellow_paper">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home_free_board"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_primary_button"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/free_board"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/home_info_board"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/home_info_board"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_primary_button"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/info_board"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_free_board"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/home_employee_board"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_primary_button"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/employee_board"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/home_empty_board"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_free_board"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/home_empty_board"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_employee_board"
            app:layout_constraintTop_toBottomOf="@+id/home_info_board"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>